// This is file was generated by netdx on (2017-11-24 12:35:42 PM.
syntax = "proto3";
package Ndx.Decoders.Core;
message Ipx {
    // Checksum ('ipx_ipx_checksum')
     uint32 IpxChecksum = 1;

    // Source Address ('ipx_ipx_src')
     string IpxSrc = 2;

    // Destination Address ('ipx_ipx_dst')
     string IpxDst = 3;

    // Src/Dst Address ('ipx_ipx_addr')
     string IpxAddr = 4;

    // Length ('ipx_ipx_len')
     uint32 IpxLen = 5;

    // Transport Control (Hops) ('ipx_ipx_hops')
     uint32 IpxHops = 6;

    // Packet Type ('ipx_ipx_packet_type')
     uint32 IpxPacketType = 7;

    // Destination Network ('ipx_dst_ipx_dst_net')
     bytes IpxDstNet = 8;

    // Destination Node ('ipx_dst_ipx_dst_node')
     bytes IpxDstNode = 9;

    // Destination Socket ('ipx_dst_ipx_dst_socket')
     uint32 IpxDstSocket = 10;

    // Source Network ('ipx_src_ipx_src_net')
     bytes IpxSrcNet = 11;

    // Source Node ('ipx_src_ipx_src_node')
     bytes IpxSrcNode = 12;

    // Source Socket ('ipx_src_ipx_src_socket')
     uint32 IpxSrcSocket = 13;

    // Source or Destination Network ('ipx_ipx_net')
     bytes IpxNet = 14;

    // Source or Destination Node ('ipx_ipx_node')
     bytes IpxNode = 15;

    // Source or Destination Socket ('ipx_ipx_socket')
     uint32 IpxSocket = 16;

    // Request ('ipx_ipxrip_request')
     bool IpxripRequest = 17;

    // Response ('ipx_ipxrip_response')
     bool IpxripResponse = 18;

    // RIP packet type ('ipx_ipxrip_packet_type')
     uint32 IpxripPacketType = 19;

    // Route Vector ('ipx_ipxrip_route_vector')
     bytes IpxripRouteVector = 20;

    // Hops ('ipx_ipxrip_hops')
     uint32 IpxripHops = 21;

    // Ticks ('ipx_ipxrip_ticks')
     uint32 IpxripTicks = 22;

    // Request ('ipx_ipxsap_request')
     bool IpxsapRequest = 23;

    // Response ('ipx_ipxsap_response')
     bool IpxsapResponse = 24;

    // SAP packet type ('ipx_ipxsap_packet_type')
     uint32 IpxsapPacketType = 25;

    // Server Name ('ipx_ipxsap_server_name')
     string IpxsapServerName = 26;

    // Server Type ('ipx_ipxsap_server_type')
     uint32 IpxsapServerType = 27;

    // Network ('ipx_ipxsap_network')
     bytes IpxsapNetwork = 28;

    // Node ('ipx_ipxsap_node')
     bytes IpxsapNode = 29;

    // Socket ('ipx_ipxsap_socket')
     uint32 IpxsapSocket = 30;

    // Intermediate Networks ('ipx_ipxsap_intermediate_networks')
     uint32 IpxsapIntermediateNetworks = 31;

    // Connection Number ('ipx_ipxmsg_conn')
     uint32 IpxmsgConn = 32;

    // Signature Char ('ipx_ipxmsg_sigchar')
     uint32 IpxmsgSigchar = 33;

}
